Made some changes in content

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
     <section>
         <h2>About Me</h2>
         <p>
-            I am a third-year Computer Science Engineering student at Rajasthan Technical University (RTU), Kota. I
-            enjoy building projects to strengthen my understanding of programming concepts and modern web technologies.
+            I am a third-year Computer Science & Engineering student at Rajasthan Technical University (RTU), Kota, passionate about building real-world projects to strengthen my understanding of programming concepts and modern web technologies.
         </p>
 
     </section>
@@ -119,7 +118,7 @@
             </thead>
             <tbody>
                 <tr>
-                    <td>Bachelor of Technology (Computer Science Engineering)</td>
+                    <td>Bachelor of Technology (Computer Science & Engineering)</td>
                     <td>Rajasthan Technical University (RTU), Kota</td>
                     <td>2023 – 2027</td>
                 </tr>
