--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <h1>Ashish Singodiya</h1>
-        <p>Computer Science & Engineering | Aspiring Software Developer</p>
+        <p>Computer Science & Engineering Student | Aspiring Software Developer</p>
         <hr>
     </header>
 
